examples/negative/type_errors/L1/11_non_bool_elsif.ob
MODULE NonBoolElsif;

VAR x: INTEGER;
    ok: INTEGER;

BEGIN
  x := 13;
  IF x = 4
  THEN
    ok := 42
  ELSIF x THEN ok := 0
  END
END NonBoolElsif.
